I've added code that generates a table of Qsca and Qbk for different weighting methods. I need to add in a CDF field to perform rescaling. I haven't tested the code yet, for issues discussed below.
Holly's runs can produce almost 15000 files. While small in compressed fomat, reading these files is slow on Windows. I tried to improve ddOutput reading by using four reader threads, but it is still too slow.
- Rewrite ddOutputSingle readers and writers to use memory mapping and unformatted i/o operations.
- Boost serialization writes the file out slowly. Is this from Boost::Iostreams?
- Use the intel profilers on a smaller test case that I already prepared. It had 410 files.


Other than that, rtmath::config throws an actual error when no rtmath.conf file is found (longstanding bug).
ddweights now includes a passthrough ddscat weights class inheriting form OrientationWeights3d.
Need to add program_options for ddweights.



git-svn-id: file:///mnt/svn/rtmath@1125 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -41,6 +41,7 @@ add_subdirectory (getm)
 ##add_subdirectory (liu-regenerate-runs)
 add_subdirectory (mie-onesphere)
 add_subdirectory (mie-slice)
+add_subdirectory (orientation-output-table)
 add_subdirectory (orientation-weights)
 add_subdirectory (orientation-weights-1d)
 add_subdirectory (orientation-weights-3d)
