Created a program to extract the oriented output of a raw ddscat run.
git-svn-id: file:///mnt/svn/rtmath@1134 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -31,6 +31,7 @@ add_subdirectory (ddscat-generate-ellipsoid)
 #add_subdirectory (ddscat-genparams)
 add_subdirectory (ddscat-output)
 add_subdirectory (ddscat-output-extract)
+add_subdirectory (ddscat-output-extract-orientations)
 add_subdirectory (ddscat-postprocess)
 add_subdirectory (ddscat-regenerate-run)
 ##add_subdirectory (ddscat-regenerate-shapes)
