Lots of changes because the departmental firewall went up.
Added my own rpline program (when Liu's are unavailable). It memory-maps the source file.

Added random orientations generating program.

Modified orientation-output table for different output and multiple inputs simultaneously.


git-svn-id: file:///mnt/svn/rtmath@1136 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -46,8 +46,10 @@ add_subdirectory (orientation-output-table)
 add_subdirectory (orientation-weights)
 add_subdirectory (orientation-weights-1d)
 add_subdirectory (orientation-weights-3d)
+add_subdirectory (orientation-weights-3d-random)
 add_subdirectory (orientation-weights-ddscat)
 #add_subdirectory (roottest)
+add_subdirectory (rpline)
 add_subdirectory (rtmath-version)
 ##add_subdirectory (sector)
 add_subdirectory (shape)
