I had started intending to extend the Voronoi code, but need to do more planning before I do it. However, I extended the shapefile class by providing BOV-style output (see Visit docs). It needs testing. To write these files, I created the shape-extract program, which will be able to write a shapefile in a multitude of different file formats.
git-svn-id: file:///mnt/svn/rtmath@1143 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -55,6 +55,7 @@ add_subdirectory (rtmath-version)
 add_subdirectory (shape)
 ##add_subdirectory (shape-basicdata)
 #add_subdirectory (shape-combo)
+add_subdirectory (shape-extract)
 add_subdirectory (shape-hash)
 add_subdirectory (shape-hull)
 add_subdirectory (shape-rehash)
