Modified app definitions to allow my to only run cmake config for specified app groups. Will speed up vs project load.
ddscat-regenerate-run should be finished. need to do testing.

tmatrix-oneellip retooled to handle per-orientation calculations of qsca. it also supports random angle generation. still using sihvola relations, which need to be changed eventually. also needs testing.


git-svn-id: file:///mnt/svn/rtmath@1149 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -13,68 +13,107 @@ option (BUILD_APPS_DEPEND_PCL
 	"Build apps that depend on PCL"
 	ON)
 
+option (BUILD_APPS_CORE
+	"Build the rtmath_core apps" ON)
+option (BUILD_APPS_DDSCAT
+	"Build applications that manipulate ddscat files" ON)
+option (BUILD_APPS_MIE
+	"Build the rtmath_mie apps" ON)
+option (BUILD_APPS_ORIENTATION
+	"Build orientation-dependent apps" ON)
+option (BUILD_APPS_SHAPE
+	"Build apps that manipulate shapes and shape statistics" ON)
+option (BUILD_APPS_TMATRIX
+	"Build the rtmath tmatrix apps" ON)
+
 #add_subdirectory (absorb-slab)
 #add_subdirectory (arm-index-files)
 #add_subdirectory (atmosplot)
-add_subdirectory (combo)
-add_subdirectory (conv-units)
+if (BUILD_APPS_CORE)
+	add_subdirectory (combo)
+	add_subdirectory (conv-units)
+endif()
 #add_subdirectory (da)
 #add_subdirectory (db-catalog-ddscat)
 #add_subdirectory (ddparse)
 #add_subdirectory (ddscat)
-add_subdirectory (ddscat-data)
-add_subdirectory (ddscat-ddpar)
-if (BUILD_APPS_DEPEND_PCL)
-add_subdirectory (ddscat-decimate)
+if (BUILD_APPS_DDSCAT)
+	add_subdirectory (ddscat-data)
+	add_subdirectory (ddscat-ddpar)
+	if (BUILD_APPS_DEPEND_PCL)
+		add_subdirectory (ddscat-decimate)
+	endif()
 endif()
-add_subdirectory (ddscat-generate-ellipsoid)
-#add_subdirectory (ddscat-genparams)
-add_subdirectory (ddscat-output)
-add_subdirectory (ddscat-output-extract)
-add_subdirectory (ddscat-output-extract-orientations)
-add_subdirectory (ddscat-postprocess)
-add_subdirectory (ddscat-regenerate-run)
-##add_subdirectory (ddscat-regenerate-shapes)
-add_subdirectory (ddscat-test)
-add_subdirectory (expand-shorthand)
-#add_subdirectory (garrett)
-add_subdirectory (getm)
+if (BUILD_APPS_SHAPE)
+	add_subdirectory (ddscat-generate-ellipsoid)
+endif()
+if (BUILD_APPS_DDSCAT)
+	#add_subdirectory (ddscat-genparams)
+	add_subdirectory (ddscat-output)
+	add_subdirectory (ddscat-output-extract)
+endif()
+if (BUILD_APPS_ORIENTATION)
+	add_subdirectory (ddscat-output-extract-orientations)
+endif()
+if (BUILD_APPS_DDSCAT)
+	add_subdirectory (ddscat-postprocess)
+	add_subdirectory (ddscat-regenerate-run)
+	##add_subdirectory (ddscat-regenerate-shapes)
+	add_subdirectory (ddscat-test)
+endif()
+if (BUILD_APPS_CORE)
+	add_subdirectory (expand-shorthand)
+	#add_subdirectory (garrett)
+	add_subdirectory (getm)
+endif()
 ##add_subdirectory (liu-regenerate-runs)
-add_subdirectory (mie-onesphere)
-add_subdirectory (mie-slice)
-add_subdirectory (orientation-output-table)
-add_subdirectory (orientation-weights)
-add_subdirectory (orientation-weights-1d)
-add_subdirectory (orientation-weights-3d)
-add_subdirectory (orientation-weights-3d-random)
-add_subdirectory (orientation-weights-ddscat)
+if (BUILD_APPS_MIE)
+	add_subdirectory (mie-onesphere)
+	add_subdirectory (mie-slice)
+endif()
+if (BUILD_APPS_ORIENTATION)
+	add_subdirectory (orientation-output-table)
+	add_subdirectory (orientation-weights)
+	add_subdirectory (orientation-weights-1d)
+	add_subdirectory (orientation-weights-3d)
+	add_subdirectory (orientation-weights-3d-random)
+	add_subdirectory (orientation-weights-ddscat)
+endif()
 #add_subdirectory (roottest)
-add_subdirectory (rpline)
-add_subdirectory (rtmath-version)
-##add_subdirectory (sector)
-add_subdirectory (shape)
-##add_subdirectory (shape-basicdata)
-#add_subdirectory (shape-combo)
-add_subdirectory (shape-extract)
-add_subdirectory (shape-hash)
-add_subdirectory (shape-hull)
-add_subdirectory (shape-rehash)
+if (BUILD_APPS_CORE)
+	add_subdirectory (rpline)
+	add_subdirectory (rtmath-version)
+	##add_subdirectory (sector)
+endif()
+if (BUILD_APPS_SHAPE)
+	add_subdirectory (shape)
+	##add_subdirectory (shape-basicdata)
+	#add_subdirectory (shape-combo)
+	add_subdirectory (shape-extract)
+	add_subdirectory (shape-hash)
+	add_subdirectory (shape-hull)
+	add_subdirectory (shape-rehash)
+endif()
 if (BUILD_APPS_DEPEND_PCL)
-add_subdirectory (shape-hexplate)
-##add_subdirectory (shape-rectprism)
-#add_subdirectory (shape-rosette)
+	add_subdirectory (shape-hexplate)
+	##add_subdirectory (shape-rectprism)
+	#add_subdirectory (shape-rosette)
 
-add_subdirectory (shape-sector-snowflake)
+	add_subdirectory (shape-sector-snowflake)
 endif()
 ##add_subdirectory (stats-ddscat-combined-plots)
-##add_subdirectory (tmatrix-convert-from-ddscat)
-add_subdirectory (tmatrix-ddscat-extract)
-add_subdirectory (tmatrix-oneellip)
-add_subdirectory (tmatrix-optimize-with-ddscat)
-add_subdirectory (tmatrix-slice)
+if (BUILD_APPS_TMATRIX)
+	##add_subdirectory (tmatrix-convert-from-ddscat)
+	add_subdirectory (tmatrix-ddscat-extract)
+	add_subdirectory (tmatrix-oneellip)
+	add_subdirectory (tmatrix-optimize-with-ddscat)
+	add_subdirectory (tmatrix-slice)
+endif()
 #add_subdirectory (transmittance)
 #add_subdirectory (uuid)
-add_subdirectory (vtktest)
+if (BUILD_APPS_SHAPE)
+	add_subdirectory (vtktest)
+endif()
 
 # Control option for creating qt apps
 option ( MAKE_GUIS
