--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -66,7 +66,9 @@ if (BUILD_APPS_CORE)
 	#add_subdirectory (garrett)
 	add_subdirectory (getm)
 endif()
-##add_subdirectory (liu-regenerate-runs)
+if (BUILD_APPS_DDSCAT)
+	add_subdirectory (liu-regenerate-runs)
+endif()
 if (BUILD_APPS_MIE)
 	add_subdirectory (mie-onesphere)
 	add_subdirectory (mie-slice)
