Much of the orientation-ensembles program is now written. TODOs: - add option to prescribe a constant concentration parameter - determine relative concentration parameters from shape stats
git-svn-id: file:///mnt/svn/rtmath@1161 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -74,6 +74,7 @@ if (BUILD_APPS_MIE)
 	add_subdirectory (mie-slice)
 endif()
 if (BUILD_APPS_ORIENTATION)
+	add_subdirectory (orientation-ensembles)
 	add_subdirectory (orientation-output-table)
 	add_subdirectory (orientation-weights)
 	add_subdirectory (orientation-weights-1d)
