Reworked the decimation code to remove pcl dependencies. Code logic is now done fully in shapefile::decimate. Small changes to the interface.
shapefile is taking ~37 s to compile on solar. Will try to see if compile time can be enhanced. Many headers + the usual stats compilation.

Also need to debug the new code and test with the decimation program.


git-svn-id: file:///mnt/svn/rtmath@1168 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/ddscat-decimate/CMakeLists.txt
+++ b/rtmath/rtmath-apps/ddscat-decimate/CMakeLists.txt
@@ -3,15 +3,16 @@ include (common)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
-find_package(PCL REQUIRED COMPONENTS common io octree segmentation surface)
-include_directories(${PCL_INCLUDE_DIRS})
-link_directories(${PCL_LIBRARY_DIRS})
+#find_package(PCL REQUIRED COMPONENTS common io octree segmentation surface)
+#include_directories(${PCL_INCLUDE_DIRS})
+#link_directories(${PCL_LIBRARY_DIRS})
 
 add_executable (rtmath-ddscat-decimate main.cpp)
-set_target_properties( rtmath-ddscat-decimate PROPERTIES FOLDER "Apps")
+set_target_properties( rtmath-ddscat-decimate PROPERTIES FOLDER "Apps/Shapes"")
 target_link_libraries(rtmath-ddscat-decimate ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat
-	${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_OCTREE_LIBRARIES} 
-	${PCL_SEGMENTATION_LIBRARIES} ${PCL_SURFACE_LIBRARIES})
+	#	${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_OCTREE_LIBRARIES} 
+	#${PCL_SEGMENTATION_LIBRARIES} ${PCL_SURFACE_LIBRARIES}
+	)
 INSTALL(TARGETS rtmath-ddscat-decimate RUNTIME DESTINATION bin COMPONENT Applications)
 
 
