--- a/rtmath/rtmath-apps/ddscat-decimate/CMakeLists.txt
+++ b/rtmath/rtmath-apps/ddscat-decimate/CMakeLists.txt
@@ -8,10 +8,10 @@ include_directories(${EIGEN3_INCLUDE_DIR})
 #link_directories(${PCL_LIBRARY_DIRS})
 
 add_executable (rtmath-ddscat-decimate main.cpp)
-set_target_properties( rtmath-ddscat-decimate PROPERTIES FOLDER "Apps/Shapes"")
+set_target_properties( rtmath-ddscat-decimate PROPERTIES FOLDER "Apps/Shapes")
 target_link_libraries(rtmath-ddscat-decimate ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat
 	#	${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_OCTREE_LIBRARIES} 
-	#${PCL_SEGMENTATION_LIBRARIES} ${PCL_SURFACE_LIBRARIES}
+	#${PCL_SEGMENTATION_LIBRARIES} ${PCL_SURFACE_LIBRARIES} 
 	)
 INSTALL(TARGETS rtmath-ddscat-decimate RUNTIME DESTINATION bin COMPONENT Applications)
 
