Added simple bov plugin example. It does nothing for now but print a success message, but it can be loaded using the rtmath::registry functions.
These functions now store the dll handle in a shared_ptr, to prevent the destructor from being called by move operations.


git-svn-id: file:///mnt/svn/rtmath@1172 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -20,7 +20,8 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 # Ask for some options
 set(INSTALL_BIN_DIR bin CACHE PATH "Installation directory for executables")
-set(INSTALL_LIB_DIR lib CACHE PATH "Installation directory for libraries")
+set(INSTALL_LIB_DIR lib CACHE PATH "Installation directory for main libraries")
+set(INSTALL_PLUGIN_DIR plugins CACHE PATH "Installation directory for plugins")
 set(INSTALL_INCLUDE_DIR include CACHE PATH "Installation directory for headers")
 if(WIN32 AND NOT CYGWIN)
 	set(DEF_INSTALL_CMAKE_DIR CMake)
@@ -191,6 +192,7 @@ include_directories(${EIGEN3_INCLUDE_DIR})
 # add_subdirectory (deps)
 #add_subdirectory (rtmath-libs/rtmath-mie)
 add_subdirectory (rtmath)
+add_subdirectory (plugins)
 if (BUILD_APPS)
 	add_subdirectory (rtmath-apps)
 endif()
