Work on shapefile class. karma parser used for output. Need to match output to input, including removong of extraneous spaces and windows newlines when reading.
shapefile decimation functions rewritten. need testing and shape-extract needs decimation support. a bulk decimator and a threshold decimator now exist as options. I am soom going to implement expansion and convolution functions for better shape manipulation.



git-svn-id: file:///mnt/svn/rtmath@1176 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -11,10 +11,11 @@ include_directories(${RYAN_SERIALIZATION_INCLUDE_DIRS})
 
 option (BUILD_PLUGINS
 	"Master switch to enable / disable building of plugins" ON)
-
-option (BUILD_PLUGIN_BOV
-	"Build shapefile BOV import / export plugin" ON)
-if (BUILD_PLUGIN_BOV)
-	add_subdirectory (bov)
+if (BUILD_PLUGINS)
+	option (BUILD_PLUGIN_BOV
+		"Build shapefile BOV import / export plugin" ON)
+	if (BUILD_PLUGIN_BOV)
+		add_subdirectory (bov)
+	endif()
 endif()
 
