rtmath builds again on linux. Need to rebuild Ryan_Debug on windows to provide info.environ, not _environ.
dlfcn links -ldl.

Turned off ddscat-decimate, as it no longer needs to be a separate program.



git-svn-id: file:///mnt/svn/rtmath@1178 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -40,7 +40,7 @@ endif()
 if (BUILD_APPS_DDSCAT)
 	add_subdirectory (ddscat-data)
 	add_subdirectory (ddscat-ddpar)
-	add_subdirectory (ddscat-decimate)
+	#add_subdirectory (ddscat-decimate)
 endif()
 if (BUILD_APPS_SHAPE)
 	add_subdirectory (ddscat-generate-ellipsoid)
