And dll loading gets progressively more confusing... Set up such that I can select dlls in subfolders in search paths, matching based on configuration and referenced rtmath module (to be implemented). findPath finds matching subpaths. searchDLLs locates dlls under a given path, recursing as desired.
The default process_static_opeiont load loads default/ dlls if default/ is present. If not, selects all dlls at the root of the dll tree.

Need to implement dependency checking based on loaded rtmath libs and dll file path.

Need to implement duplicate dll detection (by following symlinks, checking hardlinks, or comparing hashes).


git-svn-id: file:///mnt/svn/rtmath@1195 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -34,6 +34,8 @@ set(INSTALL_CMAKE_DIR ${DEF_INSTALL_CMAKE_DIR} CACHE PATH
 set(MAJOR 0)
 set(MINOR 2)
 
+set(REGISTRY_PLUGINS_OVERRIDE_DIR ../plugins CACHE PATH "Additional plugin search directory (leave to ../plugins for none)")
+
 # Get subversion revision information - for use in cpack
 #EXECUTE_PROCESS("svn info . | grep Revision: |cut -c11-" 
 #	OUTPUT_VARIABLE REVISION)
