Working to add SILO plugin. I am borrowing heavily from the SILO examples on the LLNL website, and will add the appropriate copyrights later. I've translated through QuadMesh3d, and RectilinearMesh3d is next. I'll use these to eventually define the mesh for my shapefiles, while also enjoying the provided interpolation functions.
This will eventually be used when visualizing constructed Voronoi cells.


git-svn-id: file:///mnt/svn/rtmath@1214 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -17,5 +17,15 @@ if (BUILD_PLUGINS)
 	if (BUILD_PLUGIN_BOV)
 		add_subdirectory (bov)
 	endif()
+	option (BUILD_PLUGIN_HDF5
+		"Build HDF5 IO plugin" ON)
+	if (BUILD_PLUGIN_HDF5)
+		add_subdirectory (hdf5)
+	endif()
+	option (BUILD_PLUGIN_SILO
+		"Build SILO IO plugin" ON)
+	if (BUILD_PLUGIN_SILO)
+		add_subdirectory (silo)
+	endif()
 endif()
 
