--- a/rtmath/rtmath/rtmath/cmake-settings.h.in
+++ b/rtmath/rtmath/rtmath/cmake-settings.h.in
@@ -1,6 +1,7 @@
 #pragma once
 
 #define SYS_RTC "@DATA_DIR_PREFIX@/data/rtmath.conf"
+#define REGISTRY_PLUGINS_OVERRIDE_DIR "@REGISTRY_PLUGINS_OVERRIDE_DIR@"
 
 #define COMPRESS_ZLIB @COMPRESS_ZLIB@
 #define COMPRESS_GZIP @COMPRESS_GZIP@
