The silo plugin builds, and should write points, but it is failing on memory copying of points from the Eigen matrix. Will instead allocate and recopy memory. Also failing on HDF5 file construction, so I am doing testing using PDB output. WIll debug later, and probably will add some type of switch to change the output.
git-svn-id: file:///mnt/svn/rtmath@1216 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/silo/CMakeLists.txt
+++ b/rtmath/plugins/silo/CMakeLists.txt
@@ -15,11 +15,21 @@ include_directories(${SILO_INCLUDE_DIRS})
 
 add_library (rtmath_plugin_silo SHARED 
 	plugin-silo.cpp
-	silo-shapefile.cpp)
+	silo-shapefile.cpp
+	CurveMesh3d.cpp
+	CurveMesh3d.h
+	MaterialList.cpp
+	MaterialList.h
+	QuadMesh3d.cpp
+	QuadMesh3d.h
+	RectilinearMesh3d.cpp
+	RectilinearMesh3d.h
+	remake.h
+	)
 addlib(rtmath_plugin_silo SHARED)
 
 set_target_properties( rtmath_plugin_silo PROPERTIES FOLDER "Plugins/Shapes")
-target_link_libraries(rtmath_plugin_silo ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
+target_link_libraries(rtmath_plugin_silo ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat silo)
 INSTALL(TARGETS rtmath_plugin_silo 
 	LIBRARY DESTINATION ${INSTALL_PLUGIN_DIR} 
 	ARCHIVE DESTINATION ${INSTALL_PLUGIN_DIR} 
