Moved point writing to writepoints.cpp and .h. However, writing a larger test file failes, as all possible gridded points were written. Will check again.
Still do not have the spherical mesh.


git-svn-id: file:///mnt/svn/rtmath@1219 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/silo/CMakeLists.txt
+++ b/rtmath/plugins/silo/CMakeLists.txt
@@ -16,6 +16,7 @@ include_directories(${SILO_INCLUDE_DIRS})
 add_library (rtmath_plugin_silo SHARED 
 	plugin-silo.cpp
 	silo-shapefile.cpp
+	silo-ddOutput.cpp
 	CurveMesh3d.cpp
 	CurveMesh3d.h
 	MaterialList.cpp
@@ -25,6 +26,8 @@ add_library (rtmath_plugin_silo SHARED
 	RectilinearMesh3d.cpp
 	RectilinearMesh3d.h
 	remake.h
+	WritePoints.cpp
+	WritePoints.h
 	)
 addlib(rtmath_plugin_silo SHARED)
 
