First attempt at writing hdf5 shape files. Currently writes latticePts..., but is missing all of the attributes. Will finish attributes and will also introduce a shape reader.
The routines will be used in my orientation library export.


git-svn-id: file:///mnt/svn/rtmath@1240 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/silo/CMakeLists.txt
+++ b/rtmath/plugins/silo/CMakeLists.txt
@@ -6,9 +6,11 @@ find_package(silo REQUIRED)
 include_directories(${SILO_INCLUDE_DIRS})
 #find_package(netCDF REQUIRED)
 #include_directories(${NetCDF_INCLUDE_DIRS})
-#find_package(HDF5 COMPONENTS C REQUIRED)
-#include_directories(${HDF5_INCLUDE_DIRS})
-#add_definitions(${HDF5_DEFINITIONS})
+find_package(HDF5 COMPONENTS C)
+if (HDF5_FOUND)
+include_directories(${HDF5_INCLUDE_DIRS})
+add_definitions(${HDF5_DEFINITIONS})
+endif()
 #find_package(ZLIB REQUIRED)
 #include_directories(${ZLIB_INCLUDE_DIRS})
 #find_package(SZIP REQUIRED)
@@ -17,14 +19,14 @@ add_library (rtmath_plugin_silo SHARED
 	plugin-silo.cpp
 	silo-shapefile.cpp
 	silo-ddOutput.cpp
-	CurveMesh3d.cpp
-	CurveMesh3d.h
-	MaterialList.cpp
-	MaterialList.h
-	QuadMesh3d.cpp
-	QuadMesh3d.h
-	RectilinearMesh3d.cpp
-	RectilinearMesh3d.h
+	#CurveMesh3d.cpp
+	#CurveMesh3d.h
+	#MaterialList.cpp
+	#MaterialList.h
+	#QuadMesh3d.cpp
+	#QuadMesh3d.h
+	#RectilinearMesh3d.cpp
+	#RectilinearMesh3d.h
 	remake.h
 	WritePoints.cpp
 	WritePoints.h
