--- a/rtmath/rtmath-apps/shape-extract/CMakeLists.txt
+++ b/rtmath/rtmath-apps/shape-extract/CMakeLists.txt
@@ -8,4 +8,15 @@ target_link_libraries(rtmath-shape-extract ${rtmath_ddscat-libs} rtmath_core rtm
 INSTALL(TARGETS rtmath-shape-extract RUNTIME DESTINATION bin COMPONENT Applications)
 
 
+if (BUILD_PLUGIN_SILO)
+	add_dependencies ( rtmath-shape-extract rtmath_plugin_silo)
+endif()
+if (BUILD_PLUGIN_BOV)
+	add_dependencies ( rtmath-shape-extract rtmath_plugin_bov)
+endif()
+if (BUILD_PLUGIN_HDF5)
+	add_dependencies ( rtmath-shape-extract rtmath_plugin_hdf5)
+endif()
+
+
 
