--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -2,16 +2,26 @@ include (common)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 find_package(HDF5 COMPONENTS C CXX REQUIRED)
-include_directories(${HDF5_INCLUDE_DIRS})
+include_directories(${HDF5_INCLUDE_DIRS} ${HDF5_INCLUDE_DIR_CPP})
 add_definitions(${HDF5_DEFINITIONS})
 
-add_library (rtmath_plugin_hdf5 SHARED plugin-hdf5.cpp)
+if(DEFINED HDF5_C_LIBRARIES)
+	set (h5libs ${HDF5_C_LIBRARIES} ${HDF5_CXX_LIBRARIES})
+else()
+	set (h5libs hdf5 hdf5_cpp)
+endif()
+
+add_library (rtmath_plugin_hdf5 SHARED 
+	plugin-hdf5.cpp
+	hdf5-shapefile.cpp
+	)
 addlib(rtmath_plugin_hdf5 SHARED)
 
 set_target_properties( rtmath_plugin_hdf5 PROPERTIES FOLDER "Plugins/ddscat")
 target_link_libraries(rtmath_plugin_hdf5 
 	${rtmath_ddscat-libs} rtmath_core rtmath_ddscat
-	${HDF5_C_LIBRARIES} ${HDF5_CXX_LIBRARIES})
+	${h5libs}
+	)
 INSTALL(TARGETS rtmath_plugin_hdf5 
 	LIBRARY DESTINATION ${INSTALL_PLUGIN_DIR} 
 	ARCHIVE DESTINATION ${INSTALL_PLUGIN_DIR} 
