The Voronoi code is frustrating. There is an MSVC 2012 bug causing the shared memory segment manager to not get passed correctly to the Voronoi constructors. I had to do a workaround by switching the internal objects to use std::array. Added some depGraph safeties and disabled some throws. hdf5-shapefile doesn't write out the extras fields properly - it causes an access violation. Will debug tomorrow.
git-svn-id: file:///mnt/svn/rtmath@1242 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/shape-hull/CMakeLists.txt
+++ b/rtmath/rtmath-apps/shape-hull/CMakeLists.txt
@@ -16,5 +16,9 @@ endif()
 if (BUILD_PLUGIN_BOV)
 	add_dependencies ( rtmath-shape-hull rtmath_plugin_bov)
 endif()
+if (BUILD_PLUGIN_HDF5)
+	add_dependencies ( rtmath-shape-hull rtmath_plugin_hdf5)
+endif()
+
 
 
