Adapting plugins to support multiple objects being written in the same HDF5 file. Partially done with shapefiles. Need to implement stats write for HDF5. Will extend scheme to silo files.
git-svn-id: file:///mnt/svn/rtmath@1247 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -13,6 +13,7 @@ endif()
 
 add_library (rtmath_plugin_hdf5 SHARED 
 	plugin-hdf5.cpp
+	plugin-hdf5.h
 	hdf5-shapefile.cpp
 	)
 addlib(rtmath_plugin_hdf5 SHARED)
