The shapestats hdf5 component builds. Missing two elements in shapestatsrotated, as they are vectors of Eigen matrices.
git-svn-id: file:///mnt/svn/rtmath@1251 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library (rtmath_plugin_hdf5 SHARED
 	plugin-hdf5.cpp
 	plugin-hdf5.h
 	hdf5-shapefile.cpp
+	hdf5-shapestats.cpp
 	)
 addlib(rtmath_plugin_hdf5 SHARED)
 
