--- a/rtmath/rtmath-apps/shape/CMakeLists.txt
+++ b/rtmath/rtmath-apps/shape/CMakeLists.txt
@@ -7,5 +7,13 @@ set_target_properties( rtmath-shape PROPERTIES FOLDER "Apps/Shapes")
 target_link_libraries(rtmath-shape ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
 INSTALL(TARGETS rtmath-shape RUNTIME DESTINATION bin COMPONENT Applications)
 
+if (BUILD_PLUGIN_SILO)
+	add_dependencies ( rtmath-shape rtmath_plugin_silo)
+endif()
+if (BUILD_PLUGIN_HDF5)
+	add_dependencies ( rtmath-shape rtmath_plugin_hdf5)
+endif()
+
+
 
 
