--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -1,6 +1,7 @@
 include (common)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
+
 find_package(HDF5 COMPONENTS C CXX REQUIRED)
 include_directories(${HDF5_INCLUDE_DIRS} ${HDF5_INCLUDE_DIR_CPP})
 add_definitions(${HDF5_DEFINITIONS})
@@ -10,10 +11,16 @@ if(DEFINED HDF5_C_LIBRARIES)
 else()
 	set (h5libs hdf5 hdf5_cpp)
 endif()
+FIND_PACKAGE(szip)
+IF (DEFINED SZIP_LIBRARIES)
+	include_directories(${SZIP_INCLUDE_DIRS})
+	SET (h5libs ${h5libs} szip)
+ENDIF()
 
 add_library (rtmath_plugin_hdf5 SHARED 
 	plugin-hdf5.cpp
 	plugin-hdf5.h
+	hdf5-ddoutput.cpp
 	hdf5-shapefile.cpp
 	hdf5-shapestats.cpp
 	)
