Quickly added a new application to combine records for the voro and ddoutput data. It is called comborows.
Updated rtmath core programs to properly invoke debug options parser.


git-svn-id: file:///mnt/svn/rtmath@1269 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -31,6 +31,7 @@ option (BUILD_APPS_TMATRIX
 #add_subdirectory (atmosplot)
 if (BUILD_APPS_CORE)
 	add_subdirectory (combo)
+	add_subdirectory (comborows)
 	add_subdirectory (conv-units)
 endif()
 #add_subdirectory (da)
