Revised the plugin code to allow for easier registrations with the rtmath classes. Only a single function call and function definition need to be made. I did this all to allow silo write of shapestats as a proxy to the shapefile writer. It improves the code design.
TODOs:
- When writing a single file, reenable custom functions.
- Filename write in mesh names for silo doesn't currently work.
- Need to provide a voronoi write class.
- Shapefile extras writing seems currently broken. Need to fix to reenable visualization.


git-svn-id: file:///mnt/svn/rtmath@1273 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/silo/CMakeLists.txt
+++ b/rtmath/plugins/silo/CMakeLists.txt
@@ -17,6 +17,7 @@ endif()
 
 add_library (rtmath_plugin_silo SHARED 
 	plugin-silo.cpp
+	plugin-silo.h
 	silo-shapefile.cpp
 	silo-ddOutput.cpp
 	#CurveMesh3d.cpp
