Some work with changing how files are written
git-svn-id: file:///mnt/svn/rtmath@1281 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library (rtmath_plugin_hdf5 SHARED
 	hdf5-ddoutput.cpp
 	hdf5-shapefile.cpp
 	hdf5-shapestats.cpp
+	hdf5-voronoi.cpp
 	)
 addlib(rtmath_plugin_hdf5 SHARED)
 
