I am now able to write out a simple rectilinear mesh of Voronoi data. It shows the cell ids that match a given location. For the next step, I need to write lookup functions to assign a value to each point based on the nearest Voronoi cell.
Wrote many other improvements. Voronoi arrays are now const objects inside of shared_ptrs. Using typedefs.
Fixed bugs / completed rectilinear mesh functions for silo.
hdf5 at least recognizes voronoi output.


git-svn-id: file:///mnt/svn/rtmath@1282 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/silo/CMakeLists.txt
+++ b/rtmath/plugins/silo/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library (rtmath_plugin_silo SHARED
 	plugin-silo.h
 	silo-shapefile.cpp
 	silo-ddOutput.cpp
+	silo-voronoi.cpp
 	#CurveMesh3d.cpp
 	#CurveMesh3d.h
 	#MaterialList.cpp
