My shape perturbation algorithm works properly! Shape voronoi display also works well!
Modified shapefile to again read an uncompressed stream. Used in the shape perturbation program.


git-svn-id: file:///mnt/svn/rtmath@1288 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -94,6 +94,7 @@ if (BUILD_APPS_SHAPE)
 	add_subdirectory (shape-extract)
 	add_subdirectory (shape-hash)
 	add_subdirectory (shape-hull)
+	add_subdirectory (shape-perturb-interior)
 	add_subdirectory (shape-rehash)
 endif()
 if (BUILD_APPS_DEPEND_PCL)
