Beginning to populate the plugins listing. I will reenable ROOT for some plotting (PE and other plot types). ceres-solver functionality will soon also be required. The other plugins will come in later - these entries are stubs.
Note: none of the new plugins will yet compile. I have to modify them from the base code - I used the silo plugin and copied it repeatedly.


git-svn-id: file:///mnt/svn/rtmath@1294 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -13,14 +13,24 @@ option (BUILD_PLUGINS
 	"Master switch to enable / disable building of plugins" ON)
 if (BUILD_PLUGINS)
 	option (BUILD_PLUGIN_BOV
-		"Build shapefile BOV import / export plugin" ON)
+		"Build shapefile BOV import / export plugin" OFF)
 	if (BUILD_PLUGIN_BOV)
 		add_subdirectory (bov)
+	endif()
+	option (BUILD_PLUGIN_CERES_SOLVER
+		"Build Google Ceres Solver plugin (optimization)" ON)
+	if (BUILD_PLUGIN_CERES_SOLVER)
+		add_subdirectory (ceres-solver)
 	endif()
 	option (BUILD_PLUGIN_HDF5
 		"Build HDF5 IO plugin" ON)
 	if (BUILD_PLUGIN_HDF5)
 		add_subdirectory (hdf5)
+	endif()
+	option (BUILD_PLUGIN_ROOT
+		"Build ROOT plugin (io and plotting)" ON)
+	if (BUILD_PLUGIN_ROOT)
+		add_subdirectory (root)
 	endif()
 	option (BUILD_PLUGIN_SILO
 		"Build SILO IO plugin" ON)
