Successfully modified programs to use the new plugin system. Custom plugins with exporting of data are now supported. TSV writing examples are in rtmath-shape and rtmath-shape-hull.
rtmath-shape can now export data about shape aspect ratios, summarized over different orientation configurations. I will use this for Friday's group meeting.

Need to do a linux build test.

ROOT cmake code now finds ROOT on Windows. Will make a ROOT plugin module for writing AR information as a png file.



git-svn-id: file:///mnt/svn/rtmath@1300 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/root/CMakeLists.txt
+++ b/rtmath/plugins/root/CMakeLists.txt
@@ -16,6 +16,7 @@ endif()
 add_library (rtmath_plugin_root SHARED 
 	plugin-root.cpp
 	plugin-root.h
+	root-shapestats.cpp
 	)
 addlib(rtmath_plugin_root SHARED)
 
