Fixed all tsv writing issues with shapestats. Different tsv export code will be able to write different types of tsv output. rtmath-shape tsv code already ported to the new dll. shape-hull still needs porting.
Besides debugging the minimum rotation, the stats need one more thing: to determine the ar from a 2d projection, with max angle search. Will implement this over the next few days, then the focus will shift into ensembles.


git-svn-id: file:///mnt/svn/rtmath@1303 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -37,5 +37,10 @@ if (BUILD_PLUGINS)
 	if (BUILD_PLUGIN_SILO)
 		add_subdirectory (silo)
 	endif()
+	option (BUILD_PLUGIN_TSV
+		"Build TSV export plugin" ON)
+	if (BUILD_PLUGIN_TSV)
+		add_subdirectory(tsv-export)
+	endif()
 endif()
 
