Moved over shape-hull code.
git-svn-id: file:///mnt/svn/rtmath@1304 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/tsv-export/CMakeLists.txt
+++ b/rtmath/plugins/tsv-export/CMakeLists.txt
@@ -10,6 +10,8 @@ add_library (rtmath_plugin_tsv SHARED
 	plugin-tsv.cpp
 	plugin-tsv.h
 	tsv-shapestats.cpp
+	tsv-shapestats-rotdata.cpp
+	tsv-shapestats-voro.cpp
 	)
 addlib(rtmath_plugin_tsv SHARED)
 
