Copied (not moved) the tsv export code in ddscat-output-extract and ddscat-output-extract-orientations into the tsv plugin. I have to adapt the applications, which are now redundant with each other.
Began planning the hdf5 output structure, as this file format will be used as the primary data storage format for future modeling initiatives.

Redid rtmath-apps selections to ease development.

ddOutput can now guess the temperature for a loaded set of data from the frequency and refractive index. Should be to within 1 K.


git-svn-id: file:///mnt/svn/rtmath@1306 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -9,136 +9,82 @@ include_directories(EIGEN3_INCLUDE_DIR)
 include_directories(${RYAN_DEBUG_INCLUDE_DIRS})
 include_directories(${RYAN_SERIALIZATION_INCLUDE_DIRS})
 
-option (BUILD_APPS_DEPEND_PCL
-	"Build apps that depend on PCL"
-	ON)
+#option (BUILD_APPS_DEPEND_PCL
+#	"Build apps that depend on PCL"
+#	ON)
 
-option (BUILD_APPS_CORE
-	"Build the rtmath_core apps" ON)
-option (BUILD_APPS_DDSCAT
-	"Build applications that manipulate ddscat files" ON)
-option (BUILD_APPS_MIE
-	"Build the rtmath_mie apps" ON)
-option (BUILD_APPS_ORIENTATION
-	"Build orientation-dependent apps" ON)
-option (BUILD_APPS_SHAPE
-	"Build apps that manipulate shapes and shape statistics" ON)
-option (BUILD_APPS_TMATRIX
-	"Build the rtmath tmatrix apps" ON)
+macro(addappdir appname appdefault)
+	option(BUILD_APP_${appname}
+		"Build ${appname} app"
+		${appdefault})
+	if(BUILD_APP_${appname})
+		add_subdirectory(${appname})
+	endif()
+endmacro(addappdir appname appdefault)
 
 #add_subdirectory (absorb-slab)
 #add_subdirectory (arm-index-files)
 #add_subdirectory (atmosplot)
-if (BUILD_APPS_CORE)
-	add_subdirectory (combo)
-	add_subdirectory (comborows)
-	add_subdirectory (conv-units)
-endif()
+addappdir(combo ON)
+addappdir(comborows ON)
+addappdir(conv-units ON)
+addappdir(ddscat-data ON)
+addappdir(ddscat-ddpar ON)
+addappdir(ddscat-generate-ellipsoid ON)
+addappdir(ddscat-output ON)
+addappdir(ddscat-output-extract ON)
+addappdir(ddscat-output-extract-orientations ON)
+addappdir(ddscat-postprocess ON)
+addappdir(ddscat-regenerate-run ON)
+addappdir(ddscat-test ON)
+addappdir(expand-shorthand ON)
+addappdir(getm ON)
+addappdir(liu-regenerate-runs ON)
+addappdir(mie-onesphere ON)
+addappdir(mie-slice ON)
+addappdir(orientation-ensembles ON)
+addappdir(orientation-output-table ON)
+addappdir(orientation-weights ON)
+addappdir(orientation-weights-1d ON)
+addappdir(orientation-weights-3d ON)
+addappdir(orientation-weights-3d-random ON)
+addappdir(orientation-weights-ddscat ON)
+addappdir(rpline ON)
+addappdir(rtmath-version ON)
+addappdir(shape ON)
+addappdir(shape-extract ON)
+addappdir(shape-hash ON)
+addappdir(shape-hull ON)
+addappdir(shape-perturb-interior ON)
+addappdir(shape-rehash ON)
+addappdir(tmatrix-ddscat-extract ON)
+addappdir(tmatrix-oneellip ON)
+addappdir(tmatrix-optimize-with-ddscat OFF)
+addappdir(tmatrix-slice ON)
 #add_subdirectory (da)
 #add_subdirectory (db-catalog-ddscat)
 #add_subdirectory (ddparse)
 #add_subdirectory (ddscat)
-if (BUILD_APPS_DDSCAT)
-	add_subdirectory (ddscat-data)
-	add_subdirectory (ddscat-ddpar)
-	#add_subdirectory (ddscat-decimate)
-endif()
-if (BUILD_APPS_SHAPE)
-	add_subdirectory (ddscat-generate-ellipsoid)
-endif()
-if (BUILD_APPS_DDSCAT)
-	#add_subdirectory (ddscat-genparams)
-	add_subdirectory (ddscat-output)
-	add_subdirectory (ddscat-output-extract)
-endif()
-if (BUILD_APPS_ORIENTATION)
-	add_subdirectory (ddscat-output-extract-orientations)
-endif()
-if (BUILD_APPS_DDSCAT)
-	add_subdirectory (ddscat-postprocess)
-	add_subdirectory (ddscat-regenerate-run)
+#add_subdirectory (ddscat-decimate)
+#add_subdirectory (ddscat-genparams)
 	##add_subdirectory (ddscat-regenerate-shapes)
-	add_subdirectory (ddscat-test)
-endif()
-if (BUILD_APPS_CORE)
-	add_subdirectory (expand-shorthand)
 	#add_subdirectory (garrett)
-	add_subdirectory (getm)
-endif()
-if (BUILD_APPS_DDSCAT)
-	add_subdirectory (liu-regenerate-runs)
-endif()
-if (BUILD_APPS_MIE)
-	add_subdirectory (mie-onesphere)
-	add_subdirectory (mie-slice)
-endif()
-if (BUILD_APPS_ORIENTATION)
-	add_subdirectory (orientation-ensembles)
-	add_subdirectory (orientation-output-table)
-	add_subdirectory (orientation-weights)
-	add_subdirectory (orientation-weights-1d)
-	add_subdirectory (orientation-weights-3d)
-	add_subdirectory (orientation-weights-3d-random)
-	add_subdirectory (orientation-weights-ddscat)
-endif()
 #add_subdirectory (roottest)
-if (BUILD_APPS_CORE)
-	add_subdirectory (rpline)
-	add_subdirectory (rtmath-version)
 	##add_subdirectory (sector)
-endif()
-if (BUILD_APPS_SHAPE)
-	add_subdirectory (shape)
-	##add_subdirectory (shape-basicdata)
-	#add_subdirectory (shape-combo)
-	add_subdirectory (shape-extract)
-	add_subdirectory (shape-hash)
-	add_subdirectory (shape-hull)
-	add_subdirectory (shape-perturb-interior)
-	add_subdirectory (shape-rehash)
-endif()
-if (BUILD_APPS_DEPEND_PCL)
+
+	#if (BUILD_APPS_DEPEND_PCL)
 	##add_subdirectory (shape-hexplate)
 	##add_subdirectory (shape-rectprism)
 	#add_subdirectory (shape-rosette)
 
-	add_subdirectory (shape-sector-snowflake)
-endif()
+	#add_subdirectory (shape-sector-snowflake)
+	#endif()
 ##add_subdirectory (stats-ddscat-combined-plots)
-if (BUILD_APPS_TMATRIX)
 	##add_subdirectory (tmatrix-convert-from-ddscat)
-	add_subdirectory (tmatrix-ddscat-extract)
-	add_subdirectory (tmatrix-oneellip)
-	add_subdirectory (tmatrix-optimize-with-ddscat)
-	add_subdirectory (tmatrix-slice)
-endif()
 #add_subdirectory (transmittance)
 #add_subdirectory (uuid)
-if (BUILD_APPS_SHAPE)
-	add_subdirectory (vtktest)
-endif()
-
-# Control option for creating qt apps
-option ( MAKE_GUIS
-	"Make Qt GUI programs?" OFF)
-
-if (MAKE_GUIS)
-	##	add_subdirectory (ddscat-genparams-qt)
-	if (TMATRIX_FOUND)
-
-#		add_subdirectory (tmatrix-mie-test)
-#		add_subdirectory (mie)
-	endif()
-endif()
-
-if (RYCURSES_FOUND)
-	option ( MAKE_NCURSES
-		"Make ncurses programs?" ON)
-	if (MAKE_NCURSES)
-		if (TMATRIX_FOUND)
-#			add_subdirectory (mttest)
-		endif()
-	endif()
-endif()
-
+#if (BUILD_APPS_SHAPE)
+	#	add_subdirectory (vtktest)
+	#endif()
+#	add_subdirectory (mttest)
 
